--- a/Сайт/css/main.css
+++ b/Сайт/css/main.css
@@ -16,26 +16,35 @@ header{
 }
 .navigation_pane{
     border-radius: 30px;
+    display: flex;
     justify-content: space-around;
     align-items: center;
     height: 100px;
     width:  100%;
     background-color: #B23AD4;
-    display: flex;
 }
 .button_AIF{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
     border-radius: 30px;
     height: 90%;
     width: 30%;
     background-color: #589800;
 }
 .button_Sasha{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
     border-radius: 30px;
     height: 90%;
     width:  30%;
     background-color: #589800;
 }
 .button_news{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
     border-radius: 30px;
     height: 90%;
     width:  30%;
