--- a/Сайт/css/AIF.css
+++ b/Сайт/css/AIF.css
@@ -1,7 +1,21 @@
-.personal-panel{
-    height: 500px;
-    width: 100%;
-    background-color:#78AF2C;
-    margin-top: 10px;
-    border-radius: 30px;
+#AIF-photo{
+    height: 400px;
+    border-radius: 50%;
+}
+.name-space{
+    display: flex;
+}
+.name{
+    font-family: 'Lobster'; 
+	font-size: 50px;
+}
+.flex{
+    display: flex;
+}
+#ak-photo{
+    display: flex;
+}
+.aK-photo{
+    width: 300px;
+    margin: 30px;
 }
