--- a/Сайт/css/panel.css
+++ b/Сайт/css/panel.css
@@ -1,8 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Alkatra&family=Lobster&family=Titillium+Web:wght@300&display=swap');
 html{
     height: 100%;
-    background:linear-gradient(135deg,rgba(6,147,227,1) 0%,#9b51e0 50%);
+    background:linear-gradient(135deg,rgba(6,147,227,1) 0%,#9b51e0 40%);
     background-repeat: no-repeat;
     margin: 0px;
+}
+.test{
+    font-family: 'Titillium Web'; 
+	font-size: 55px;
+}
+h2{
+    font-size: 40px;
 }
 header{
     justify-content: space-around;
@@ -16,18 +24,27 @@ header{
     justify-content: center;
     align-items: center;
 }
-/*.sait_naem{
-    
-}*/
-.navigation_pane{
-    border-radius: 30px;
+
+header{
     display: flex;
-    justify-content: space-around;
+    height: auto;
     align-items: center;
-    height: 100px;
-    width:  100%;
-    background-color: #B23AD4;
+    justify-content:space-between;
+    margin: 0px;
 }
+.navigation_pane{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+
+    
+    
+    
+}
+.button{
+    margin-left:10% ;
+}
+/*
 .button_AIF{
     display: flex;
     justify-content: space-around;
